<?xml version="1.0"?>
<package format="2">
  <name>pubsub</name>
  <version>0.0.1</version>
  <description>Example package using QT5 QML in a ROS node</description>

  <maintainer email="andrew@stelterfamily.net">ipiano</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
